# SynthACticBench

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md  new-benchmark-template.md
.github/workflows/: lint-and-test.yml
config/: database_cred.yml  experiment_config.yml  irace.yml  smac20-ac-moo.yml  smac20-ac.yml
synthacticbench/: abstract_function.py  base_functions.py  configuration_space_functions.py  functions.py  generate_instances.py  irace_optimizer.py  objective_functions.py  search_space_functions.py  synthacticbench_problem.py
synthacticbench/configs/problem/SynthACticBench/: ActivationStructures.yaml  C1-RelevantParameters.yaml  C2-ParameterInteractions-ackley.yaml  C2-ParameterInteractions-griewank.yaml  C2-ParameterInteractions-rosenbrock.yaml  C3-MixedTypes.yaml  C4-ActivationStructures.yaml  C5-ShiftingDomains.yaml  C6-HierarchicalStructures.yaml  C7-InvalidParameterization.yaml  C8-MixedDomains.yaml  DeterministicObjective.yaml  HierarchicalStructures.yaml  InvalidParameterization.yaml  InvalidParametrisation.yaml  MixedDomains.yaml  NoisyEvaluation.yaml  O1-DeterministicObjective.yaml  O2-NoisyEvaluation.yaml  O3-MultipleObjectives.yaml  O4-TimeDependentNOP.yaml  O4-TimeDependentOP.yaml  O5-CensoredObjective.yaml  O6-Multimodal.yaml  O7-SinglePeak.yaml  ParameterInteractions-ackley.yaml  ParameterInteractions-griewank.yaml  ParameterInteractions-rosenbrock.yaml  RelevantParameters.yaml  RelevantParameters_1.yaml  S1-RelevantParameters.yaml  S2-ParameterInteractions-griewank.yaml  S2-ParameterInteractions-rosenbrock.yaml  S4-ActivationStructures.yaml  S7-InvalidParameterization.yaml  S8-MixedDomains.yaml  ShiftingDomains.yaml  SinglePeak.yaml  TimeDependentNOP.yaml  TimeDependentOP.yaml
synthacticbench/experimenter/: synthactic_experimenter.py
synthacticbench/utils/: math.py  synthactic.drawio
tests/: test.py  test_minima.py
